# pdf-page-selector

./: README.md  main.py  pyproject.toml  requirements.txt  style.qss
.github/workflows/: release.yml
