[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ChiselPDF"
version = "1.0.0"
description = "A simple desktop application for working with PDF files"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "kelltom"}
]
keywords = ["pdf", "pyqt6", "gui", "pdf-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "PyQt6>=6.10.0",
    "PyMuPDF>=1.25.2",
    "darkdetect>=0.8.0",
    "pyinstaller>=6.16.0",
    "velopack>=0.0.1369.dev7516",
]

[project.urls]
Homepage = "https://github.com/kelltom/ChiselPDF"
Repository = "https://github.com/kelltom/ChiselPDF.git"
Issues = "https://github.com/kelltom/ChiselPDF/issues"
